--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -125,7 +125,7 @@
 % changes the default name `Bibliography` -> `References'
 \renewcommand{\bibname}{References}
 
-
+\renewcommand\chaptername{Capítulo} 
 % ******************************************************************************
 % ************************* User Defined Commands ******************************
 % ******************************************************************************
@@ -193,3 +193,13 @@
 % *****************************************************************************
 % ******************* Better enumeration my MB*************
 \usepackage{enumitem}
+
+\usepackage{algpseudocode}
+\usepackage[linesnumbered,lined,commentsnumbered]{algorithm2e}
+
+%Mis paquetes
+\usepackage[final]{pdfpages}
+
+
+\DeclareMathOperator*{\argmax}{arg\,máx}
+\DeclareMathOperator*{\argmin}{arg\,mín}
