Corrección de algunos errores de tipográficos.

--- a/References/references.bib
+++ b/References/references.bib
@@ -67,3 +67,10 @@ pages={179--196},   year={2019} }
 @article{mcfarlane2018survey,   title={A survey of exploration strategies in reinforcement learning},   author={McFarlane, Roger},   journal={McGill University, http://www. cs. mcgill. ca/cs526/roger. pdf, accessed: April},   year={2018} } 
 @misc{hafner2019dream,     title={Dream to Control: Learning Behaviors by Latent Imagination},     author={Danijar Hafner and Timothy Lillicrap and Jimmy Ba and Mohammad Norouzi},     year={2019},     eprint={1912.01603},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
 @misc{saunders2017trial,     title={Trial without Error: Towards Safe Reinforcement Learning via Human Intervention},     author={William Saunders and Girish Sastry and Andreas Stuhlmueller and Owain Evans},     year={2017},     eprint={1707.05173},     archivePrefix={arXiv},     primaryClass={cs.AI} }
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
