--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -139,8 +139,8 @@
 
 % ********************** TOC depth and numbering depth *************************
 
-\setcounter{secnumdepth}{2}
-\setcounter{tocdepth}{2}
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 
 % ******************************* Nomenclature *********************************
@@ -194,11 +194,12 @@
 % ******************* Better enumeration my MB*************
 \usepackage{enumitem}
 
-\usepackage{algpseudocode}
-\usepackage[linesnumbered,lined,commentsnumbered]{algorithm2e}
-
+% \usepackage{algpseudocode}
+% \usepackage[linesnumbered,lined,commentsnumbered]{algorithm2e}
+% \usepackage{algorithmic}
 %Mis paquetes
 \usepackage[final]{pdfpages}
+\usepackage{algorithm,algorithmic}
 
 
 \DeclareMathOperator*{\argmax}{arg\,máx}
