--- a/References/references.bib
+++ b/References/references.bib
@@ -74,3 +74,40 @@ pages={179--196},   year={2019} }
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+
+@misc{greaves, title={Understanding RL: The Bellman Equations}, url={https://joshgreaves.com/reinforcement-learning/understanding-rl-the-bellman-equations/}, journal={Understanding RL: The Bellman Equations}, author={Greaves, Joshua}}
+
+
+@book{lapan_2020, place={Birmingham}, title={Deep reinforcement learning hands-on: apply modern RL methods to practical problems of chatbots, robotics, discrete optimization, web automation, and more}, publisher={Packt Publishing}, author={Lapan, Maxim}, year={2020}}
+
+@techreport{lin1993reinforcement,
+  title={Reinforcement learning for robots using neural networks},
+  author={Lin, Long-Ji},
+  year={1993},
+  institution={Carnegie-Mellon Univ Pittsburgh PA School of Computer Science}
+}
+
+@book{gonzalez-soto, title={Use and acquisition of causal relationsfor decision making under uncertaintyusing imperfect information games}, author={Gonzalez-Soto, Mauricio}}
+
+@book{pearl2016causal,
+  title={Causal inference in statistics: A primer},
+  author={Pearl, Judea and Glymour, Madelyn and Jewell, Nicholas P},
+  year={2016},
+  publisher={John Wiley \& Sons}
+}
+
+@article{zhu2019causal,
+  title={Causal discovery with reinforcement learning},
+  author={Zhu, Shengyu and Ng, Ignavier and Chen, Zhitang},
+  journal={arXiv preprint arXiv:1906.04477},
+  year={2019}
+}
+
+
+@article{pearl2018theoretical,
+  title={Theoretical impediments to machine learning with seven sparks from the causal revolution},
+  author={Pearl, Judea},
+  journal={arXiv preprint arXiv:1801.04016},
+  year={2018}
+}
