--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,5 @@
 \documentclass[letterpaper,12pt,numbered,print,index]{Classes/PhDThesisPSnPDF}
 
-
 % `oneside' or `twoside'(default): Printing double side (twoside) or single
 % side.
 %
@@ -124,9 +123,9 @@
 \include{Chapter1/introduction}
 \include{Chapter2/background}
 \include{Chapter3/related_work}
-%\include{Chapter4/chapter4}
-%\include{Chapter5/chapter5}
-%\include{Chapter6/chapter6}
+\include{Chapter4/method}
+\include{Chapter5/results}
+\include{Chapter6/conclusions}
 %\include{Chapter7/chapter7}
 
 
