Draft Medio capítulo 5

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -72,8 +72,8 @@
 % uncommenting the following line
 % This is for people stuck with older versions of texlive
 %\usepackage{sty/caption/subcaption}
-\usepackage{subcaption}
-
+% \usepackage{subcaption}
+\usepackage{subfig}
 % ********************************** Tables ************************************
 \usepackage{booktabs} % For professional looking tables
 \usepackage{multirow}
