--- a/References/references.bib
+++ b/References/references.bib
@@ -76,7 +76,7 @@ pages={179--196},   year={2019} }
 }
 
 
-@misc{greaves, title={Understanding RL: The Bellman Equations}, url={https://joshgreaves.com/reinforcement-learning/understanding-rl-the-bellman-equations/}, journal={Understanding RL: The Bellman Equations}, author={Greaves, Joshua}}
+@misc{greaves, title={Understanding RL: The Bellman Equations}, url={https://joshgreaves.com/reinforcement-learning/understanding-rl-the-bellman-equations/}, journal={Understanding RL: The Bellman Equations}, author={Greaves, Joshua}, year={2017}}
 
 
 @book{lapan_2020, place={Birmingham}, title={Deep reinforcement learning hands-on: apply modern RL methods to practical problems of chatbots, robotics, discrete optimization, web automation, and more}, publisher={Packt Publishing}, author={Lapan, Maxim}, year={2020}}
@@ -88,7 +88,7 @@ pages={179--196},   year={2019} }
   institution={Carnegie-Mellon Univ Pittsburgh PA School of Computer Science}
 }
 
-@book{gonzalez-soto, title={Use and acquisition of causal relationsfor decision making under uncertaintyusing imperfect information games}, author={Gonzalez-Soto, Mauricio}}
+@techreport{gonzalez-soto, title={Use and acquisition of causal relationsfor decision making under uncertainty using imperfect information games}, author={Gonzalez-Soto, Mauricio}, institution={Instituto Nacional de Astrofísica, Óptica y Electrónica}, year={2019}}
 
 @book{pearl2016causal,
   title={Causal inference in statistics: A primer},
