--- a/thesis.tex
+++ b/thesis.tex
@@ -67,6 +67,7 @@
 % Preamble: Contains packages and user-defined commands and settings
 \input{Preamble/preamble}
 
+
 % ************************ Thesis Information & Meta-data **********************
 % Thesis title and author information, refernce file for biblatex
 \input{thesis-info}
@@ -102,8 +103,8 @@
 % \include{Dedication/dedication}
 % \include{Declaration/declaration}
 % \include{Acknowledgement/acknowledgement}
-% \include{Abstract/abstract}
-
+\include{Abstract/abstract}
+\include{Abstract/resumen}
 % *********************** Adding TOC and List of Figures ***********************
 
 \tableofcontents
