--- a/Abstract/resumen.tex
+++ b/Abstract/resumen.tex
@@ -1,5 +1,5 @@
 
-\begin{abstract}
+\begin{resumen}
 
 
 El aprendizaje por refuerzo es un paradigma de aprendizaje por interacción indispensable dentro del aprendizaje automático. Uno de los principales retos que surgen en 
@@ -29,6 +29,6 @@ en la selección de acciones del algoritmo Q-learning
 lleva a una recompensa final y a un salto inicial de
 recompensa mayores. Además, se muestra que 
 no es obligatorio contar con una estructura causal 
-completamenta y correcta. Incluso, guiar a una agente con una estructura parcial o con relaciones falsas se alcanza un mejor desempeño que no utilizar información suplementaria.
+completamente y correcta. Incluso, guiar a una agente con una estructura parcial o con relaciones falsas se alcanza un mejor desempeño que no utilizar información suplementaria.
 
-\end{abstract}
+\end{resumen}
