--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,12pt,numbered,print,index]{Classes/PhDThesisPSnPDF}
+\documentclass[letterpaper,12pt,numbered,print,index, oneside]{Classes/PhDThesisPSnPDF}
 
 % `oneside' or `twoside'(default): Printing double side (twoside) or single
 % side.
