Termina capítulo 3, falta revisar.

--- a/Abstract/resumen.tex
+++ b/Abstract/resumen.tex
@@ -29,6 +29,6 @@ en la selección de acciones del algoritmo Q-learning
 lleva a una recompensa final y a un salto inicial de
 recompensa mayores. Además, se muestra que 
 no es obligatorio contar con una estructura causal 
-completamente y correcta. Incluso, guiar a una agente con una estructura parcial o con relaciones falsas se alcanza un mejor desempeño que no utilizar información suplementaria.
+completa y correcta. Incluso, guiar a una agente con una estructura parcial o con relaciones falsas se alcanza un mejor desempeño que no utilizar información suplementaria.
 
 \end{resumen}
