--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -203,6 +203,7 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{mwe}
+\usepackage[table,xcdraw]{xcolor}
 
 \newlength{\tempdima}
 \newcommand{\rowname}[1]% #1 = text
