--- a/References/references.bib
+++ b/References/references.bib
@@ -49,7 +49,7 @@ pages={179--196},   year={2019} }
 }
 @article{holland1986statistics,   title={Statistics and causal inference},   author={Holland, Paul W},   journal={Journal of the American statistical Association},   volume={81},   number={396},   pages={945--960},   year={1986},   publisher={Taylor \& Francis} } 
 @article{pearl2010introduction,   title={An introduction to causal inference},   author={Pearl, Judea},   journal={The international journal of biostatistics},   volume={6},   number={2},   year={2010},   publisher={De Gruyter} } 
-@article{gonzalez2019reinforcement,   title={Reinforcement Learning is not a Causal problem},   author={Gonzalez-Soto, Mauricio and Espina, Felipe Orihuela},   journal={arXiv preprint arXiv:1908.07617},   year={2019} } 
+
 @article{mnih2015human,   title={Human-level control through deep reinforcement learning},   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},   journal={Nature},   volume={518},   number={7540},   pages={529--533},   year={2015},   publisher={Nature Publishing Group} } 
 @article{starcraft2019deepmind,    author = {Vinyals, Oriol and Babuschkin, Igor and Czarnecki, Wojciech M and Mathieu, Michaël and Dudzik, Andrew and Chung, Junyoung and Choi, David H and Powell, Richard and Ewalds, Timo and Georgiev, Petko and Oh, Junhyuk and Horgan, Dan and Kroiss, Manuel and Danihelka, Ivo and Huang, Aja and Sifre, Laurent and Cai, Trevor and Agapiou, John P and Jaderberg, Max and Vezhnevets, Alexander S and Leblond, Rémi and Pohlen, Tobias and Dalibard, Valentin and Budden, David and Sulsky, Yury and Molloy, James and Paine, Tom L and Gulcehre, Caglar and Wang, Ziyu and Pfaff, Tobias and Wu, Yuhuai and Ring, Roman and Yogatama, Dani and Wünsch, Dario and McKinney, Katrina and Smith, Oliver and Schaul, Tom and Lillicrap, Timothy and Kavukcuoglu, Koray and Hassabis, Demis and Apps, Chris and Silver, David},    title = {{Grandmaster level in StarCraft II using multi-agent reinforcement learning}},    issn = {0028-0836},    doi = {10.1038/s41586-019-1724-z},    pages = {350--354},    number = {7782},    volume = {575},    journal = {Nature},    year = {2019} } 
 @article {Silver1140, 	author = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and Lillicrap, Timothy and Simonyan, Karen and Hassabis, Demis}, 	title = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play}, 	volume = {362}, 	number = {6419}, 	pages = {1140--1144}, 	year = {2018}, 	doi = {10.1126/science.aar6404}, 	publisher = {American Association for the Advancement of Science}, 	issn = {0036-8075}, 	URL = {https://science.sciencemag.org/content/362/6419/1140}, 	eprint = {https://science.sciencemag.org/content/362/6419/1140.full.pdf}, 	journal = {Science} } 
@@ -110,4 +110,46 @@ pages={179--196},   year={2019} }
   author={Pearl, Judea},
   journal={arXiv preprint arXiv:1801.04016},
   year={2018}
+}
+@book{jebara2012machine,
+  title={Machine learning: discriminative and generative},
+  author={Jebara, Tony},
+  volume={755},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+@misc{gonzalezsoto2019von,
+    title={von Neumann-Morgenstern and Savage Theorems for Causal Decision Making},
+    author={Mauricio Gonzalez-Soto and Luis E. Sucar and Hugo J. Escalante},
+    year={2019},
+    eprint={1907.11752},
+    archivePrefix={arXiv},
+    primaryClass={cs.AI}
+}
+
+@misc{everitt2019reward,
+    title={Reward Tampering Problems and Solutions in Reinforcement Learning: A Causal Influence Diagram Perspective},
+    author={Tom Everitt and Marcus Hutter},
+    year={2019},
+    eprint={1908.04734},
+    archivePrefix={arXiv},
+    primaryClass={cs.AI}
+}
+
+@inproceedings{edmonds2018human,
+  title={Human Causal Transfer: Challenges for Deep Reinforcement Learning.},
+  author={Edmonds, Mark and Kubricht, James and Summers, Colin and Zhu, Yixin and Rothrock, Brandon and Zhu, Song-Chun and Lu, Hongjing},
+  booktitle={CogSci},
+  year={2018}
+}
+
+
+
+@misc{shi2020selfsupervised,
+    title={Self-Supervised Discovering of Causal Features: Towards Interpretable Reinforcement Learning},
+    author={Wenjie Shi and Shiji Song and Zhuoyuan Wang and Gao Huang},
+    year={2020},
+    eprint={2003.07069},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
 }
