Pruebas estadísticas del taxi incluidas.

--- a/References/references.bib
+++ b/References/references.bib
@@ -153,3 +153,12 @@ pages={179--196},   year={2019} }
     archivePrefix={arXiv},
     primaryClass={cs.CV}
 }
+
+@misc{colas2019hitchhikers,
+    title={A Hitchhiker's Guide to Statistical Comparisons of Reinforcement Learning Algorithms},
+    author={Cédric Colas and Olivier Sigaud and Pierre-Yves Oudeyer},
+    year={2019},
+    eprint={1904.06979},
+    archivePrefix={arXiv},
+    primaryClass={stat.ME}
+}
