--- a/References/references.bib
+++ b/References/references.bib
@@ -162,3 +162,10 @@ pages={179--196},   year={2019} }
     archivePrefix={arXiv},
     primaryClass={stat.ME}
 }
+
+@misc{gym2016brockman,
+  Author = {Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba},
+  Title = {OpenAI Gym},
+  Year = {2016},
+  Eprint = {arXiv:1606.01540},
+}
