--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -198,7 +198,7 @@
 % \usepackage[linesnumbered,lined,commentsnumbered]{algorithm2e}
 % \usepackage{algorithmic}
 %Mis paquetes
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 \usepackage[final]{pdfpages}
 \usepackage{algorithm}
 \usepackage{algorithmic}
