Correcciones, salvo por las gráficas de eduardo. Faltan las de Enrique.

--- a/References/references.bib
+++ b/References/references.bib
@@ -169,3 +169,12 @@ pages={179--196},   year={2019} }
   Year = {2016},
   Eprint = {arXiv:1606.01540},
 }
+
+@misc{pan2018policy,
+    title={Policy Optimization with Model-based Explorations},
+    author={Feiyang Pan and Qingpeng Cai and An-Xiang Zeng and Chun-Xiang Pan and Qing Da and Hualin He and Qing He and Pingzhong Tang},
+    year={2018},
+    eprint={1811.07350},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
