Versión entregada antes de la versión del 31 de agosto. Segunda vuelta de revisión final.

--- a/References/references.bib
+++ b/References/references.bib
@@ -178,3 +178,20 @@ pages={179--196},   year={2019} }
     archivePrefix={arXiv},
     primaryClass={cs.LG}
 }
+
+
+@misc{nair2017overcoming,
+    title={Overcoming Exploration in Reinforcement Learning with Demonstrations},
+    author={Ashvin Nair and Bob McGrew and Marcin Andrychowicz and Wojciech Zaremba and Pieter Abbeel},
+    year={2017},
+    eprint={1709.10089},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@inproceedings{Abel2015GoalBasedAP,
+  title={Goal-Based Action Priors},
+  author={David Abel and D. Hershkowitz and Gabriel Barth-Maron and Stephen Brawner and K. O'Farrell and J. MacGlashan and Stefanie Tellex},
+  booktitle={ICAPS},
+  year={2015}
+}
