Versión final para sínodos. Entrega 31 de agosto.

--- a/Abstract/resumen.tex
+++ b/Abstract/resumen.tex
@@ -18,7 +18,7 @@ causal es brindada.
 Un modelo causal ayuda a restringir el espacio de búsqueda, al
 guiar la toma de decisiones de un agente, mediante consultas en un grafo causal. Por ejemplo, verificando qué variables 
 son causas directas de otras.
-Esto parece simular un sentido común que disminuye el
+Este conocimiento causal permite disminuir el
 tiempo que toma el enfoque de prueba y error.
 Entre las contribuciones de esta investigación están: 1)
 la representación de la información extra en un grafo causal y 2) un algoritmo para guiar la selección de acciones 
