--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -199,6 +199,7 @@
 % \usepackage{algorithmic}
 %Mis paquetes
 \usepackage[spanish,es-tabla]{babel}
+\decimalpoint
 \usepackage[final]{pdfpages}
 \usepackage{algorithm}
 \usepackage{algorithmic}
