--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -206,10 +206,11 @@
 \usepackage{mwe}
 \usepackage[table,xcdraw]{xcolor}
 
-
+\usepackage{color,soulutf8}
 \newlength{\tempdima}
 \newcommand{\rowname}[1]% #1 = text
 {\rotatebox{90}{\makebox[\tempdima][c]{\textbf{#1}}}}
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
 
+\usepackage[font=small,labelfont=bf]{caption}
