--- a/References/references.bib
+++ b/References/references.bib
@@ -195,3 +195,32 @@ pages={179--196},   year={2019} }
   booktitle={ICAPS},
   year={2015}
 }
+
+
+
+@misc{kathpalia2019measuring,
+      title={Measuring Causality: The Science of Cause and Effect}, 
+      author={Aditi Kathpalia and Nithin Nagaraj},
+      year={2019},
+      eprint={1910.08750},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
+@book{campbell1979quasi,
+  title={Quasi-experimentation: Design \& analysis issues for field settings},
+  author={Campbell, Donald Thomas and Cook, Thomas D},
+  year={1979},
+  publisher={Rand McNally College Publishing Company Chicago}
+}
+
+@INPROCEEDINGS{complexRLhamagami,  author={T. {Hamagami} and T. {Shibuya} and S. {Shimada}},  booktitle={2006 IEEE International Conference on Systems, Man and Cybernetics},   title={Complex-Valued Reinforcement Learning},   year={2006},  volume={5},  number={},  pages={4175-4179},  doi={10.1109/ICSMC.2006.384789}}
+
+
+@misc{gonzalezsoto2020causal,
+      title={Causal Structure Learning: a Bayesian approach based on random graphs}, 
+      author={Mauricio Gonzalez-Soto and Ivan R. Feliciano-Avelino and L. Enrique Sucar and Hugo J. Escalante Balderas},
+      year={2020},
+      eprint={2010.06164},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
