--- a/thesis.tex
+++ b/thesis.tex
@@ -123,10 +123,10 @@
 
 \include{Chapter1/introduction}
 \include{Chapter2/background}
-\include{Chapter3/related_work}
-\include{Chapter4/method}
-\include{Chapter5/results}
-\include{Chapter6/conclusions}
+% \include{Chapter3/related_work}
+% \include{Chapter4/method}
+% \include{Chapter5/results}
+% \include{Chapter6/conclusions}
 %\include{Chapter7/chapter7}
 
 
